--- a/Scoutingapplication2/app/src/main/res/values/strings.xml
+++ b/Scoutingapplication2/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="auto">Auto line crossed</string>
     <string name="Auto_quest_1">Cube on switch</string>
     <string name="Auto_Quest_2">Cube on scale</string>
+    <string name="team">Insert team number here (no spaces please)</string>
 </resources>
